# inspectord

./: Cargo.toml  Dockerfile  README.md
inspectord/: Cargo.toml
inspectord-common/: Cargo.toml
inspectord-common/src/: lib.rs
inspectord-ebpf/: Cargo.toml
inspectord-ebpf/src/: main.rs
inspectord/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
